tests/error/empty_member_ptr.gw
#! [contains] NullPtrException
class C
{
	funcdef void test();
	var test t;
}
<<< var C c >>>;
<<< c.t >>>;
c.t();
